--- a/编辑问卷.css
+++ b/编辑问卷.css
@@ -389,3 +389,11 @@ a.WenJuan1 {
     width: 800px;
     height: 50px;
 }
+.options-container {
+    margin: 1rem 0;
+    padding-left: 2rem;
+}
+
+.optionDiv {
+    margin: 0.5rem 0;
+}
